--- a/index.html
+++ b/index.html
@@ -13,132 +13,16 @@
 		<link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
 
+
+		<!-- CSS, NIGGA -->
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		
 		<!-- Skrollr: https://github.com/Prinzhorn/ -->
-		<script type="text/javascript" src="skrollr.js"></script>
+		<script type="text/javascript" src="js/skrollr.js"></script>
 
 		<!-- jQuery: http://jquery.com/ -->
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 
-		<style type="text/css">
-
-			body {
-				color: black;
-			}
-
-			.img-bg, .black-bg, .white-bg{
-				position:fixed;
-				top:0;
-				left:0;
-				width:100%;
-				height:100%;
-			}
-
-			.img-bg{
-				background: url(./assets/img/WEB_prime_wet_EDITED.jpg);
-				background-size:cover;
-				z-index:-2;
-			}
-			.black-bg{
-				padding-top: 40vh;
-				text-align: center;
-				background: black;
-				z-index:-3;
-			}
-
-
-			.white-bg{
-				background: white;
-				z-index:-4;
-			}
-
-			header {
-				position: relative;
-				height:100vh;
-				top: 0px;
-			}
-
-			header img {
-				width: 100%;
-			}
-
-			#meta {
-				width: 40vw;
-				float: right;
-				margin-top: 5vh;
-				margin-right: 10vw;
-			}
-
-			header h2 {
-				color: white;
-				font-size: 1em;
-				font-family: "Lato", sans-serif;
-			}
-
-			.name {
-				font-weight: lighter;
-				font-family: 'Lobster', cursive;
-			}
-
-			#meta h2 {
-				font-size: 1.1em;
-				font-family: 'EB Garamond', serif;
-				margin-left: 10px;
-			}
-
-
-			#back {
-				height: 20px;
-				background-color: rgb(255, 255, 255, 0.8);
-			}
-
-			#back a {
-				color: white;
-			}
-
-			#content {
-				margin: 0 auto;
-				width: 70vw;
-			}
-
-			#main {
-				font-family: "Roboto", Helvetica, Arial, sans-serif;
-			}
-
-			#lower-image {
-				width: 40vw;
-				float: right;
-			}
-
-			#lower-image img {
-				width: 100%;
-			} 
-
-			#one {
-				height: 100vh;
-			}
-
-			#white-color {
-				position: relative;
-				top: 40vh;
-				color: white;
-				font-size: 2em;
-				font-family: "Vollkorn", Georgia, serif;
-				font-size: 22px;
-				font-weight: 400;
-			}
-
-			hr {
-				margin-top: 30px;
-				width: 50%;
-				margin-bottom: 30px;
-			}
-
-			#janitor {
-				height: 400px;
-				float: left;
-			}
-
-		</style>
 	</head>
 
 	<body>
