--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 				<p>“We are not professionals,” Badalich said of the students behind the the All of Us campaign. “Students should be telling their stories to someone trained and equipped to deal with those stories.”</p>
 				<footer>
 					Questions, comments, or concerns? Email <a href="mailto:jholmes@media.ucla.edu">Katie Shephard </a><br />
-					Page created by <a href="mailto:ngupta@media.ucla.edu">Nikhil Gupta</a>, <a href="mailto:kshepherd@media.ucla.edu">Jenjira Holmes</a>, and <a href="mailto:asrivastava@media.ucla.edu">Anumat Srivastava</a> / Daily Bruin
+					Page created by <a href="mailto:ngupta@media.ucla.edu">Nikhil Gupta</a>, <a href="mailto:jholmes@media.ucla.edu">Jenjira Holmes</a>, and <a href="mailto:asrivastava@media.ucla.edu">Anumat Srivastava</a> / Daily Bruin
 				</footer>
 			</div>
 		<div>
