--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		</header>
 		<div id="container">
 			<div id="sub-header">
-				<p>Update: At the time of printing, Devin Murphy held the post of Undergraduate Students Association Council President. Between the time of printing and the time the magazine was placed on stands, Murphy resigned from office.</p>
+				<p>Update: At the time of printing, Devin Murphy held the post of Undergraduate Students Association Council president. Between the time of printing and the time prime magazine was placed on stands, Murphy resigned from office.</p>
 				<p>The online version of this article has been updated to reflect this change.</p>
 			</div>	
 			<div id="sub-container">
@@ -52,7 +52,7 @@
 				<p>“I tried to make myself so busy that I didn’t think about things. By avoiding things, I just succumbed to my depression," said Badalich, who now serves as the Undergraduate Students Association Council Student Wellness Commissioner and spent the last year heading a campaign to stop sexual violence on college campuses.</p>
 				<p>She said her depression stemmed from her own sexual assault, and that she avoided counseling for months because she didn’t understand the connection between her trauma and her mental state.</p>
 				<p>“When I luckily survived, I realized that I needed help,” she said.</p>
-				<p>But a fear of being seen visiting <img id="janitor" src="./assets/img/janitor_BLACK.png"> a counseling center on campus and the even more powerful worry of her parents finding psychological services on their insurance claims kept Badalich from visiting UCLA Counseling and Psychological Services right away.</p>
+				<p>But a fear of being seen visiting a <img id="janitor" src="./assets/img/janitor_BLACK.png">counseling center on campus and the even more powerful worry of her parents finding psychological services on their insurance claims kept Badalich from visiting UCLA Counseling and Psychological Services right away.</p>
 				<p>Instead, she drove several miles to visit the Valley Community Treatment Center in the nearby San Fernando Valley.</p>
 				<p>“I was very lucky that I had a car. Had I not, I don’t know what would have happened,” she said. “I don’t think I would have taken the bus. Any and all excuses to not go to counseling, I would have found them.”</p>
 				<p>Badalich said her own fear of seeking professional help made her wonder how many other students are experiencing similar hardships and do not have the resources to seek off-campus help like she did.</p>
@@ -74,7 +74,7 @@
 				<p>CAPS director Elizabeth Gong-Guy said the grant provided CAPS with resources specifically targeted toward a handful of initiatives: early intervention and suicide prevention, peer programming and technological support.</p>
 				<p>With those funds, spread over three years, CAPS provided an online screening for depression and suicide to more than 12,000 students, developed a mobile application for the clinic and increased funding for student-led events that worked to counter the stigma surrounding mental health concerns, Gong-Guy said.</p>
 				<p>But much of the work that CAPS has accomplished over the past three years through use of these funds came to a halt this past June, when the grant expired, she added. Small amounts of money remain, but the accounts are in the process of being closed, she added.</p>
-				<p>“Before Proposition 63, there were not adequate-enough services for acute mental health and drug rehabilitation,” said USAC President Devin Murphy.</p>
+				<p>“Before Proposition 63, there were not adequate-enough services for acute mental health and drug rehabilitation,” said fourth-year political science and African-American studies student Devin Murphy. Murphy recently resigned from his position as USAC President, citing the toll of campus climate on his mental, emotional and physical health. His office co-sponsored the All of Us campaign.<b></b></p>
 				<p>The law provided significant funding for mental health programs across California, including at universities.</p>
 				<p>“But the funding from Proposition 63 (ended) this year, and now we’re asking where to find funding,” he said.</p>
 				<p>The decreased funding for comprehensive mental health resources on California college campuses comes at a time when students are suffering from serious mental health conditions in high numbers.</p>
@@ -108,15 +108,15 @@
 				<p>The Office for Civil Rights, an agency under the U.S. Department of Education, has determined that some universities violated federal law by dismissing students from school without first attempting to provide reasonable accommodations for a legally protected disability.</p>
 				<p>“There are no categorical rules, and ultimately what is required will vary depending on the facts and circumstances of each individual student's situation,” said a spokesman from the U.S. Department of Education in an email statement. “These laws also prohibit colleges and universities from excluding a student from a program based on myths, fears or stereotypes about mental health-related disabilities.”</p>
 				<p>The Office for Civil Rights is currently working on a guide for universities to use to ensure that they are complying with federal laws, including Title II of the Americans with Disabilities Act and Section 504 of the Rehabilitation Act of 1973.</p>
-				<p>To address the concerns with mental health policies, funding and stigma on UC campuses, Murphy and Badalich are joining efforts with the other 12 USAC councilmembers in the All of Us campaign for mental health awareness.</p>
+				<p>To address the concerns with mental health policies, funding and stigma on UC campuses, Badalich is joining efforts with the other 12 USAC councilmembers in the All of Us campaign for mental health awareness.</p>
 				<p>The campaign launched at the onset of fall quarter and has a multifaceted approach to addressing mental health awareness at UCLA and the rest of the UC.</p>
-				<p>Murphy is heading the lobbying portion of the campaign, which focuses on advocating for more funding for mental health resources and targets the UC Board of Regents, UCOP and California state legislators.</p>
+				<p>Prior to his resignation, Murphy headed the lobbying portion of the campaign, which focused on advocating for more funding for mental health resources and targets the UC Board of Regents, UCOP and California state legislators.</p>
 				<figure>
 					<img id="person" src="./assets/img/DEVIN-FINAL.jpg">
 					<figcaption>Devin Murphy, <br>former Undergraduate Students <br> Association Council president <br> (Neil Bedi)</figcaption>
 				</figure>
 				<p>“We want to start a conversation around mental health funding,” Murphy said.</p>
-				<p>He said the campaign is aiming to lobby the regents and state lawmakers in conjunction with UC President Janet Napolitano and student governments from other UC campuses.</p>
+				<p>He said the campaign aimed to lobby the regents and state lawmakers in conjunction with UC President Janet Napolitano and student governments from other UC campuses. However, the future of this portion of the campaign is currently unknown since Murphy is no longer heading the campaign as president.</p>
 				<p>“This should be a matter of truly shared governance. We should be lobbying together,” he said. “If we did that, it might provide stronger arguments (to fund mental health).”</p>
 				<p>Murphy said the issue of mental health does not exist in isolation for activists at UCLA. It is tied to the Invest in Graduation Not Incarceration, Transform Education campaign – which focuses on diminishing the school-to-prison pipeline in California – because spending less money on prisons would free up funds for mental health resources and support, he said.</p>
 				<p>Similarly, he said mental health touches on other issues, like immigration reform and lesbian, gay, bisexual and transgender inclusion. The communities affected by those social movements experience hardships that put them at risk for mental health concerns.</p>
@@ -126,7 +126,7 @@
 				<p>Oved said the latter model would provide more flexibility for campuses to address their own distinct needs in effective ways. For example, he said UCLA does not need funds to focus on outreach, since CAPS already serves so many students. But at UC Riverside, a much smaller portion of the campus uses the counseling services that are available.</p>
 				<p>Murphy said he was concerned that there was not enough communication with students about the possible fee increase to generate support and understanding for the initiative. Students do not have a chance to offer alternatives to a fee, he added.</p>
 				<p>“When students see that (new fee), they see tuition hike after tuition hike,” Murphy said. “Seeing this as an issue without student input – without coming to us for solutions – is really disheartening.”</p>
-				<p>Still, the All of Us campaign will be working on advocating to the regents and state lawmakers in January for new sources of funding to support mental health resources on UC campuses.</p>
+				<p>Before Murphy resigned, the All of Us campaign was planning on advocating to the regents and state lawmakers in January for new sources of funding to support mental health resources on UC campuses.</p>
 				<p>“If you don’t fund us what we need (for mental health services), you’re stating that these priorities are not your priorities,” Murphy said.</p>
 				<p>The campaign does not just include lobbying the UC and the state for more mental health funding. Badalich said she is heading the educational portion of All of Us, which aims to decrease stigma and raise awareness of the mental health resources that exist at UCLA.</p>
 				<img id="quote" src="./assets/img/mental-health-quote-devinTRANSPARENT.png">
