--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 	<body>
 
 		<header>
-<!-- 			<img id="fill" src="./assets/img/WEB_prime_wet_EDITED.jpg" />
- -->			<div id="back">
+			<div id="back">
 				<a href="http://graphics.dailybruin.com/prime/fall-2014/" id="prime">&laquo; Daily Bruin <em>prime</em> fall 2014 issue</a>
 			</div>
 			<div id="meta">
@@ -143,8 +142,8 @@
 			<img src="./assets/img/bags.png">
 		</div>
 		<div class="img-bg" data-0="opacity:1;" data-700="opacity:0;"></div>
-		<div class="black-bg" data-700="opacity:1;" data-1350="opacity:0;"></div>
-		<div class="white-bg" data-0="opacity:0;" data-1350="opacity:1;"></div>
+		<div class="black-bg" data-700="opacity:1;" data-1250="opacity:0;"></div>
+		<div class="white-bg" data-0="opacity:0;" data-1250="opacity:1;"></div>
 	<body>
 	<script type="text/javascript">
 
